# Trackmaker

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Trackmaker.1
.github/workflows/: release.yml
assets/export/: test.json
assets/original/: isstunt.tracktemplate  scurve.track
assets/tracks/: 1.track  2.track  3.track  4.track  5.track  6-big.track  loop-test.track  perfect_loop.track  scurve.track  scurve2.track  scurve3.track  scurve4.track
assets/tracktemplates/: guardrail_road.tracktemplate  isstunt-highres.tracktemplate  isstunt.tracktemplate  space_tunnel.tracktemplate
scripts/: tracktemplate_to_obj.py
src/: build_and_test.bat  main_editor.cpp  main_test.cpp  os_utils.cpp  os_utils.h
src/shared/: AnchorPoint.cpp  AnchorPoint.h  CommandLineInterface.cpp  CommandLineInterface.h  FileWriter.cpp  FileWriter.h  Template.cpp  Template.h  Track.cpp  Track.h  Vec4.cpp  Vec4.h
