cmake_minimum_required(VERSION 3.14)
project(TrackmakerEditor CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# 1. Fetch Raylib
include(FetchContent)
FetchContent_Declare(
    raylib
    GIT_REPOSITORY https://github.com/raysan5/raylib.git
    GIT_TAG master
)
set(BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
FetchContent_MakeAvailable(raylib)

# 2. Fetch Dear ImGui
FetchContent_Declare(
    imgui
    GIT_REPOSITORY https://github.com/ocornut/imgui.git
    GIT_TAG docking
)
FetchContent_MakeAvailable(imgui)

# 3. Fetch rlImGui (Bridge between Raylib and ImGui)
FetchContent_Declare(
    rlimgui
    GIT_REPOSITORY https://github.com/raylib-extras/rlImGui.git
    GIT_TAG main
)
FetchContent_MakeAvailable(rlimgui)

# 3.5 Fetch ImGuizmo (3D Gizmo for ImGui)
FetchContent_Declare(
    imguizmo
    GIT_REPOSITORY https://github.com/CedricGuillemet/ImGuizmo.git
    GIT_TAG master
)
FetchContent_MakeAvailable(imguizmo)

# 4. Define our executable and ALL source files
add_executable(TrackmakerEditor 
    src/main_editor.cpp
    src/os_utils.cpp
    
    # Core Trackmaker logic
    src/shared/Vec4.cpp
    src/shared/AnchorPoint.cpp
    src/shared/Track.cpp
    src/shared/Template.cpp
    src/shared/FileWriter.cpp

    # Dear ImGui core source files
    ${imgui_SOURCE_DIR}/imgui.cpp
    ${imgui_SOURCE_DIR}/imgui_demo.cpp
    ${imgui_SOURCE_DIR}/imgui_draw.cpp
    ${imgui_SOURCE_DIR}/imgui_tables.cpp
    ${imgui_SOURCE_DIR}/imgui_widgets.cpp

    # rlImGui source file
    ${rlimgui_SOURCE_DIR}/rlImGui.cpp

    # ImGuizmo source files
    ${imguizmo_SOURCE_DIR}/ImGuizmo.cpp
)

# 5. Include directories (Using lowercase variables generated by FetchContent)
target_include_directories(TrackmakerEditor PRIVATE 
    ${raylib_SOURCE_DIR}/src
    ${imgui_SOURCE_DIR}
    ${rlimgui_SOURCE_DIR}
    ${imguizmo_SOURCE_DIR}
    src
    src/shared
    .
)

# 6. Link libraries (Only Raylib needs dynamic linking)
target_link_libraries(TrackmakerEditor PRIVATE raylib)