cmake_minimum_required(VERSION 3.14)
project(TrackmakerEditor CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# 1. Fetch Raylib
include(FetchContent)
FetchContent_Declare(
    raylib
    GIT_REPOSITORY https://github.com/raysan5/raylib.git
    GIT_TAG master
)
set(BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
FetchContent_MakeAvailable(raylib)

# 2. Fetch Dear ImGui
FetchContent_Declare(
    imgui
    GIT_REPOSITORY https://github.com/ocornut/imgui.git
    GIT_TAG docking
)
FetchContent_MakeAvailable(imgui)

# 3. Fetch rlImGui (Bridge between Raylib and ImGui)
FetchContent_Declare(
    rlimgui
    GIT_REPOSITORY https://github.com/raylib-extras/rlImGui.git
    GIT_TAG main
)
FetchContent_MakeAvailable(rlimgui)

# 3.5 Fetch ImGuizmo (3D Gizmo for ImGui)
FetchContent_Declare(
    imguizmo
    GIT_REPOSITORY https://github.com/CedricGuillemet/ImGuizmo.git
    GIT_TAG master
)
FetchContent_MakeAvailable(imguizmo)

# 3.6 Fetch portable-file-dialogs (Cross-platform file dialogs)
FetchContent_Declare(
    pfd
    GIT_REPOSITORY https://github.com/samhocevar/portable-file-dialogs.git
    GIT_TAG main
)
set(CMAKE_POLICY_VERSION_MINIMUM 3.5)
FetchContent_MakeAvailable(pfd)
unset(CMAKE_POLICY_VERSION_MINIMUM)

# 4. Define our executable and ALL source files
add_executable(TrackmakerEditor 
    src/main_editor.cpp
    src/os_utils.cpp
    
    # Core Trackmaker logic
    src/shared/Vec4.cpp
    src/shared/AnchorPoint.cpp
    src/shared/Track.cpp
    src/shared/Template.cpp
    src/shared/FileWriter.cpp

    # Dear ImGui core source files
    ${imgui_SOURCE_DIR}/imgui.cpp
    ${imgui_SOURCE_DIR}/imgui_demo.cpp
    ${imgui_SOURCE_DIR}/imgui_draw.cpp
    ${imgui_SOURCE_DIR}/imgui_tables.cpp
    ${imgui_SOURCE_DIR}/imgui_widgets.cpp

    # rlImGui source file
    ${rlimgui_SOURCE_DIR}/rlImGui.cpp

    # ImGuizmo source files
    ${imguizmo_SOURCE_DIR}/ImGuizmo.cpp
)

# 5. Include directories (Using lowercase variables generated by FetchContent)
target_include_directories(TrackmakerEditor PRIVATE 
    ${raylib_SOURCE_DIR}/src
    ${imgui_SOURCE_DIR}
    ${rlimgui_SOURCE_DIR}
    ${imguizmo_SOURCE_DIR}
    ${pfd_SOURCE_DIR}
    src
    src/shared
    .
)

# 6. Link libraries (Only Raylib needs dynamic linking)
target_link_libraries(TrackmakerEditor PRIVATE raylib)

# ==============================================================================
# 7. Installation & Packaging (CPack)
# ==============================================================================

# 7.1 Define what files go into the final release folder/zip
# Install the compiled executable
install(TARGETS TrackmakerEditor DESTINATION . COMPONENT TrackmakerApp)
# Install the assets directory alongside the executable
install(DIRECTORY ${CMAKE_SOURCE_DIR}/assets DESTINATION . COMPONENT TrackmakerApp)
# Install documentation
install(FILES ${CMAKE_SOURCE_DIR}/README.md DESTINATION . COMPONENT TrackmakerApp)

# 7.2 Configure CPack to generate a ZIP file
set(CPACK_GENERATOR "ZIP")
set(CPACK_PACKAGE_NAME "Trackmaker")
set(CPACK_PACKAGE_FILE_NAME "TrackmakerEditor-${CMAKE_SYSTEM_NAME}")
set(CPACK_INCLUDE_TOPLEVEL_DIRECTORY OFF) # Don't put everything inside an extra parent folder in the ZIP

# Tell CPack to ONLY package our component, ignoring Raylib's dev files
set(CPACK_COMPONENTS_ALL TrackmakerApp)

include(CPack)

# 7.3 Add a custom target to build the release zip easily
add_custom_target(release
    DEPENDS TrackmakerEditor
    COMMAND ${CMAKE_CPACK_COMMAND} -G ZIP
    WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
    COMMENT "Creating release zip file with CPack..."
)